<resources>
    <string name="app_name">Courses Scheduler</string>


    <string name="logout">Log Out</string>


    <string name="upComing">Up Coming Classes</string>
    <string name="this_week">This Week</string>

    <string name="profile_info">Profile Detail</string>
    <string name="create">Create A New Class</string>
    <string name="total_units">Registered Units: %1$d</string>
    <string name="total_classes">Number Of Registered Classes: %1$d</string>
    <string name="total_hours_odd_week">Total Number Of Hours On Odd Weeks: %1$d</string>
    <string name="total_hours_even_week">Total Number Of Hours On Even Weeks: %1$d</string>


    <string name="teachers">Teachers</string>
    <string name="classes">Classes</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>


    <string name="snack_ERR">Something went wrong! Try again.</string>
    <string name="teacher_add_success">Teacher added successfully.</string>

    <string name="name">Name:</string>
    <string name="degree">Degree:</string>
    <string name="discipline">Discipline:</string>
    <string name="expertise">Expertise:</string>
    <string name="birthYear">Birth Year:</string>
    <string name="age">Age:</string>
    <string name="email">Email:</string>
    <string name="stage">Stage:</string>
    <string name="unknown">Unknown</string>
    <string name="idealTerm">Ideal Term:</string>
    <string name="units">Units:</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="selectImage">Select an image</string>
    <string name="profilePic">Profile Image</string>


</resources>
