<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ClassDialogFragment">
    <TextView
            android:text="@string/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/idealTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/discipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:text="@string/name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>
    <TextView
            android:text="@string/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/units" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/idealTerm"
    />

    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idealTerm" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/discipline"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stage" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
    />
    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discipline" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/stage"
    />
    <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toTopOf="@+id/delete" app:layout_constraintBottom_toBottomOf="@+id/delete"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toEndOf="@+id/delete"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.875"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:backgroundTint="@android:color/holo_red_dark"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="90dp" android:id="@+id/guideline"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/classInstancesRecycleView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/delete" app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>