<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddClassDialogFragment">
    <TextView
            android:text="@string/idealTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/idealTermInput"
            app:layout_constraintBottom_toBottomOf="@+id/idealTermInput"/>
    <TextView
            android:text="@string/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/unitsInput"
            app:layout_constraintBottom_toBottomOf="@+id/unitsInput"/>
    <TextView
            android:text="@string/stage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/stageInput"
            app:layout_constraintBottom_toBottomOf="@+id/stageInput"/>
    <TextView
            android:text="@string/discipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/disciplineInput"
            app:layout_constraintBottom_toBottomOf="@+id/disciplineInput"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/nameInput" app:layout_constraintTop_toTopOf="@+id/nameInput"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/stageInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameInput"
            app:layout_constraintStart_toEndOf="@+id/textView12" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/disciplineInput"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stageInput" app:layout_constraintStart_toEndOf="@+id/textView13"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/idealTermInput"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/disciplineInput" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/unitsInput" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/idealTermInput"
            app:layout_constraintStart_toEndOf="@+id/textView14" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:backgroundTint="@android:color/holo_blue_dark"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintTop_toTopOf="@+id/cancel" app:layout_constraintBottom_toBottomOf="@+id/cancel"
            app:layout_constraintStart_toEndOf="@+id/cancel" app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fui_cancel"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/unitsInput"/>


</androidx.constraintlayout.widget.ConstraintLayout>