<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TeacherDialogFragment" android:id="@+id/frameLayout3">
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
    />
    <TextView
            android:text="@string/birthYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/expertise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/discipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:text="@string/name" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>
    <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp" tools:src="@tools:sample/avatars"
            android:id="@+id/profilePic" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/expertise"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/age"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:textColor="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expertise" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/discipline"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/degree" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discipline" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/degree"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/delete"
            app:backgroundTint = "@android:color/holo_blue_dark"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
    />
    <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profilePic"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginStart="8dp"
            app:backgroundTint = "@android:color/holo_red_dark"
            android:textAppearance="?android:textAppearanceMedium"
            style="@style/Widget.MaterialComponents.Button"
    />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="90dp" android:id="@+id/guideline"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline4"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_end="120dp"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5" app:layout_constraintGuide_begin="500dp"
                                                android:orientation="horizontal"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintBottom_toTopOf="@+id/guideline5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/classInstancesRecycleView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    />
</androidx.constraintlayout.widget.ConstraintLayout>